--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject",
     "react-scripts": "1.1.0"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "prop-types": "^15.6.0",
     "react-test-renderer": "^16.2.0",
     "selenium-standalone": "^6.12.0",
     "wdio-dot-reporter": "0.0.9",
