Connected Redux to the application to dispatch events and subscribe to state and added. Tested and created action and reducer.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "jest": "20.0.4",
+    "jest-cli": "20.0.4",
     "prop-types": "^15.6.0",
+    "react-redux": "^5.0.6",
     "react-test-renderer": "^16.2.0",
+    "redux": "^3.7.2",
     "selenium-standalone": "^6.12.0",
     "wdio-dot-reporter": "0.0.9",
     "wdio-mocha-framework": "^0.5.12",
